--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    background-color: aquamarine;
+}
+
+.todo-list .header input {
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid #333333;
+    width: 165px;
+    border-radius: 5px;
+}
+.todo-list .header button {
+    padding: 10px;
+    font-size: 16px;
+    margin: 10px 0 10px 10px;
+    background-color: #0066FF;
+    color: #FFF;
+    border: 2px solid #0066FF;
+    border-radius: 5px;
+}
+.todo-list .header button:hover {
+    background-color: #003399;
+    border: 2px solid #003399;
+    cursor: pointer;
+}
+.todo-list .list {
+    list-style: none;
+    width: 60%;
+    min-width: 250px;
+}
+.todo-list .list li {
+    color: #333;
+    background-color: rgba(255,255,255  ,.9);
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    list-style: none;
+}
+ul.list {
+    padding: 0;
+}
+.todo-list .list li {
+    color: #333;
+    background-color: rgba(255,255,255,.5);
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+
+    transition: background-color .2s ease-out;
+}
+
+.todo-list .list li:hover {
+    background-color: pink;
+    cursor: pointer;
 }
